--- a/FlexiMobile/src/main/resources/flexigroup.properties
+++ b/FlexiMobile/src/main/resources/flexigroup.properties
@@ -9,6 +9,6 @@ hibernate.showsql=true
 hibernate.hbm2ddl.auto=update
 
 # Externalise configuration properties for different environments. Local dev assumes local MySQL DB.
-flexi.aws.email.accesskey=AKIAJJM4NN7V4ETLK3ZQ
-flexi.aws.email.secretkey=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
-flexi.email.sender=corey.banks@silverquest.com.au
+flexi.aws.email.accesskey=AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+flexi.aws.email.secretkey=BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
+flexi.email.sender=email@test.org
